--- a/fr/index.html
+++ b/fr/index.html
@@ -18,6 +18,7 @@
         <a href="#services">Services</a>
         <a href="#projects">Projets</a>
         <a href="#about">À propos</a>
+        <a href="#team">Notre équipe</a>
         <a href="#contact">Contact</a>
       </div>
       <div class="lang-switcher">
@@ -30,7 +31,7 @@
     <div class="hero-content">
       <h1>Vos experts en installation d'armoires</h1>
       <p>Nous transformons votre espace avec des armoires sur mesure, installées avec précision.</p>
-      <button onclick="scrollToContact()">Soumission Gratuite</button>
+      <button onclick="scrollToContact()">Demandez une soumission</button>
     </div>
   </section>
 
@@ -43,7 +44,7 @@
       </div>
       <div class="service-card">
         <h3>Salle de bain</h3>
-        <p>Installation d’armoire de salle de bain</p>
+        <p>Installation d’armoires de salle de bain</p>
       </div>
       <div class="service-card">
         <h3>Rangement</h3>
