--- a/en/index.html
+++ b/en/index.html
@@ -17,6 +17,7 @@
         <a href="#services">Services</a>
         <a href="#projects">Projects</a>
         <a href="#about">About</a>
+        <a href="#team">Our Team</a>
         <a href="#contact">Contact</a>
       </div>
       <div class="lang-switcher">
@@ -28,7 +29,7 @@
     <div class="hero-content">
       <h1>Your Cabinet Installation Experts</h1>
       <p>We transform your space with custom cabinets, installed with precision.</p>
-      <button onclick="scrollToContact()">Free Quote</button>
+      <button onclick="scrollToContact()">Ask for a quote</button>
     </div>
   </section>
   <section id="services" class="services">
