--- a/fr/index.html
+++ b/fr/index.html
@@ -109,12 +109,16 @@
   <section id="contact" class="contact">
     <h2>Contactez-Nous</h2>
     <div class="contact-container">
-      <form id="contactForm" name="Soumission" netlify>
+      <form id="contactForm" name="Soumission" netlify enctype="multipart/form-data">
         <input type="text" name="name" placeholder="Nom" required>
         <input type="email" name="email" placeholder="Courriel" required>
         <input type="tel" name="phone" placeholder="Téléphone">
-        <textarea name="message" placeholder="Dites-en nous plus sur votre projet"
-          required></textarea>
+        <textarea name="message" placeholder="Dites-en nous plus sur votre projet" required></textarea>
+        <div class="file-input-container">
+          <!-- <label for="file-upload" class="file-upload-label">Joindre des fichiers (PDF, Images)</label> -->
+          <input type="file" id="file-upload" name="attachment" accept=".pdf,image/*" multiple>
+          <div id="file-list" class="file-list-display"></div>
+        </div>
         <button type="submit">Envoyer</button>
       </form>
       <div class="contact-info">
