--- a/en/index.html
+++ b/en/index.html
@@ -35,19 +35,19 @@
   <section id="services" class="services">
     <h2>Our Services</h2>
     <div class="service-grid">
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
         <h3>Kitchen</h3>
         <p>Kitchen cabinet installation</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
         <h3>Bathroom</h3>
         <p>Bathroom cabinet installation</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
         <h3>Storage</h3>
         <p>Manufacturing and installation of storage cabinets</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
         <h3>Interior Finishing</h3>
         <p>Installation of moldings, backsplashes, interior doors, and much more.</p>
       </div>
