--- a/fr/index.html
+++ b/fr/index.html
@@ -38,19 +38,19 @@
   <section id="services" class="services">
     <h2>Nos Services</h2>
     <div class="service-grid">
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
         <h3>Cuisine</h3>
         <p>Installation d’armoires de cuisine</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
         <h3>Salle de bain</h3>
         <p>Installation d’armoires de salle de bain</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
         <h3>Rangement</h3>
         <p>Fabrication et installation d’armoire de rangement</p>
       </div>
-      <div class="service-card">
+      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
         <h3>Finition intérieure</h3>
         <p>Installation de moulures, dosserets, portes intérieures, et bien plus.</p>
       </div>
