--- a/en/index.html
+++ b/en/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Welcome to our family business, specializing in the installation of kitchen, bathroom, and storage cabinets. With several years of experience, we have perfected our craftsmanship to offer top-quality installations. Our professional team is dedicated to each project, ensuring impeccable results that meet your expectations. We are passionate about our trade and are committed to transforming your space with custom solutions and a flawless finish. Trust our expertise for results that combine quality, precision, and satisfaction.">
   <title>Espace Sur Mesure Inc.</title>
   <link rel="stylesheet" href="/style.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "GeneralContractor",
+      "image": [
+       ],
+      "name": "Espace Sur Mesure Inc.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "",
+        "addressLocality": "Mascouche",
+        "addressRegion": "QC",
+        "postalCode": "",
+        "addressCountry": "CA"
+      },
+      "url": "https://www.espacesurmesure.ca/",
+      "email": "info@espacesurmesure.ca",
+      "telephone": "+15147040232, +15143711047",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "08:00",
+          "closes": "17:00"
+        }
+      ]
+    }
+  </script>
   <script defer src="main.js"></script>
 </head>
+
 <body>
   <header>
     <nav>
@@ -21,7 +59,7 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="lang-switcher">
-        <a href="/fr/">FR</a> 
+        <a href="/fr/">FR</a>
       </div>
     </nav>
   </header>
@@ -35,19 +73,23 @@
   <section id="services" class="services">
     <h2>Our Services</h2>
     <div class="service-grid">
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
         <h3>Kitchen</h3>
         <p>Kitchen cabinet installation</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
         <h3>Bathroom</h3>
         <p>Bathroom cabinet installation</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
         <h3>Storage</h3>
         <p>Manufacturing and installation of storage cabinets</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
         <h3>Interior Finishing</h3>
         <p>Installation of moldings, backsplashes, interior doors, and much more.</p>
       </div>
@@ -78,9 +120,13 @@
   </section>
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Welcome to our family business, specializing in the installation of kitchen, bathroom, and storage cabinets. With several years of experience, we have perfected our craftsmanship to offer top-quality installations.
-      Our professional team is dedicated to each project, ensuring impeccable results that meet your expectations. We are passionate about our trade and are committed to transforming your space with custom solutions and a flawless finish.
-      
+    <p>Welcome to our family business, specializing in the installation of kitchen, bathroom, and storage cabinets. With
+      several years of experience, we have perfected our craftsmanship to offer top-quality installations.
+
+      Our professional team is dedicated to each project, ensuring impeccable results that meet your expectations. We
+      are passionate about our trade and are committed to transforming your space with custom solutions and a flawless
+      finish.
+
       Trust our expertise for results that combine quality, precision, and satisfaction.</p>
   </section>
   <section id="team" class="team">
@@ -90,13 +136,17 @@
         <!-- <img src="/team1.jpg" alt="Christophe Sanchez"> -->
         <h3>Christophe Sanchez</h3>
         <p>Owner</p>
-        <p>Christophe, a cabinetmaker with over 40 years of experience. Passionate about his work, he has completed numerous renovation projects and custom cabinet creations. His expertise and dedication guarantee high-quality results, meeting your expectations and deadlines.</p>
+        <p>Christophe, a cabinetmaker with over 40 years of experience. Passionate about his work, he has completed
+          numerous renovation projects and custom cabinet creations. His expertise and dedication guarantee high-quality
+          results, meeting your expectations and deadlines.</p>
       </div>
       <div class="team-member">
         <!-- <img src="/team2.jpg" alt="Maxime Sanchez"> -->
         <h3>Maxime Sanchez</h3>
         <p>Owner</p>
-        <p>Maxime inherited his father's passion for the trade. Thanks to his skills and experience, he carries out high-quality work. His commitment to customer satisfaction and his attention to detail guarantee impeccable results.</p>
+        <p>Maxime inherited his father's passion for the trade. Thanks to his skills and experience, he carries out
+          high-quality work. His commitment to customer satisfaction and his attention to detail guarantee impeccable
+          results.</p>
       </div>
     </div>
   </section>
@@ -131,4 +181,5 @@
   </footer>
   <script type="module" src="/main.js"></script>
 </body>
+
 </html>
