--- a/fr/index.html
+++ b/fr/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Bienvenue dans notre entreprise familiale, spécialisée dans l’installation d’armoires de cuisine, de salle de bain et de rangement. Avec plusieurs années d’expérience, nous avons perfectionné notre savoir-faire pour offrir des installations de qualité supérieure. Notre équipe professionnelle est dédiée à chaque projet, assurant des résultats impeccables qui répondent à vos attentes. Nous sommes passionnés par notre métier et nous nous engageons à transformer votre espace avec des solutions sur mesure et une finition irréprochable. Faites confiance à notre savoir-faire pour des résultats qui allient qualité, précision et satisfaction.">
   <title>Espace Sur Mesure Inc.</title>
   <link rel="stylesheet" href="/style.css">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "GeneralContractor",
+      "image": [
+       ],
+      "name": "Espace Sur Mesure Inc.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "",
+        "addressLocality": "Mascouche",
+        "addressRegion": "QC",
+        "postalCode": "",
+        "addressCountry": "CA"
+      },
+      "url": "https://www.espacesurmesure.ca/",
+      "email": "info@espacesurmesure.ca",
+      "telephone": "+15147040232, +15143711047",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "08:00",
+          "closes": "17:00"
+        }
+      ]
+    }
+  </script>
   <script defer src="main.js"></script>
 </head>
 
@@ -38,19 +75,23 @@
   <section id="services" class="services">
     <h2>Nos Services</h2>
     <div class="service-grid">
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/cuisine.jpg');">
         <h3>Cuisine</h3>
         <p>Installation d’armoires de cuisine</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/salledebain.jpg');">
         <h3>Salle de bain</h3>
         <p>Installation d’armoires de salle de bain</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/rangement.jpg');">
         <h3>Rangement</h3>
         <p>Fabrication et installation d’armoire de rangement</p>
       </div>
-      <div class="service-card" style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
+      <div class="service-card"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/finition.jpeg');">
         <h3>Finition intérieure</h3>
         <p>Installation de moulures, dosserets, portes intérieures, et bien plus.</p>
       </div>
@@ -81,10 +122,14 @@
 
   <section id="about" class="about">
     <h2>À Propos de Nous</h2>
-    <p>Bienvenue dans notre entreprise familiale, spécialisée dans l’installation d’armoires de cuisine, de salle de bain et de rangement. Avec plusieurs années d’expérience, nous avons perfectionné notre savoir-faire pour offrir des installations de qualité supérieure.
+    <p>Bienvenue dans notre entreprise familiale, spécialisée dans l’installation d’armoires de cuisine, de salle de
+      bain et de rangement. Avec plusieurs années d’expérience, nous avons perfectionné notre savoir-faire pour offrir
+      des installations de qualité supérieure.
 
-      Notre équipe professionnelle est dédiée à chaque projet, assurant des résultats impeccables qui répondent à vos attentes. Nous sommes passionnés par notre métier et nous nous engageons à transformer votre espace avec des solutions sur mesure et une finition irréprochable.
-      
+      Notre équipe professionnelle est dédiée à chaque projet, assurant des résultats impeccables qui répondent à vos
+      attentes. Nous sommes passionnés par notre métier et nous nous engageons à transformer votre espace avec des
+      solutions sur mesure et une finition irréprochable.
+
       Faites confiance à notre savoir-faire pour des résultats qui allient qualité, précision et satisfaction.</p>
   </section>
 
@@ -95,13 +140,17 @@
         <!-- <img src="/team1.jpg" alt="Christophe Sanchez"> -->
         <h3>Christophe Sanchez</h3>
         <p>Propriétaire</p>
-        <p>Christophe, un ébéniste avec plus de 40 ans d’expérience. Passionné par son travail , il a réalisé de nombreux projets de rénovation et de création d’armoire sur mesure. Son expertise et son dévouement garantissent des résultats de haute qualité, respectant vos attentes et vos délais.</p>
+        <p>Christophe, un ébéniste avec plus de 40 ans d’expérience. Passionné par son travail , il a réalisé de
+          nombreux projets de rénovation et de création d’armoire sur mesure. Son expertise et son dévouement
+          garantissent des résultats de haute qualité, respectant vos attentes et vos délais.</p>
       </div>
       <div class="team-member">
         <!-- <img src="/team2.jpg" alt="Maxime Sanchez"> -->
         <h3>Maxime Sanchez</h3>
         <p>Propriétaire</p>
-        <p>Maxime a hérité de la passion de son père pour le métier de menuisier. Grâce à ses compétences et à son expérience, il réalise des travaux  de haute qualité. Son engagement envers la satisfaction client et son souci du détail garantissent des résultats impeccables.</p>
+        <p>Maxime a hérité de la passion de son père pour le métier de menuisier. Grâce à ses compétences et à son
+          expérience, il réalise des travaux de haute qualité. Son engagement envers la satisfaction client et son souci
+          du détail garantissent des résultats impeccables.</p>
       </div>
     </div>
   </section>
