--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Espace Sur Mesure</title>
+    <meta name="description"
+        content="Bienvenue dans notre entreprise familiale, spécialisée dans l’installation d’armoires de cuisine, de salle de bain et de rangement. Avec plusieurs années d’expérience, nous avons perfectionné notre savoir-faire pour offrir des installations de qualité supérieure. Notre équipe professionnelle est dédiée à chaque projet, assurant des résultats impeccables qui répondent à vos attentes. Nous sommes passionnés par notre métier et nous nous engageons à transformer votre espace avec des solutions sur mesure et une finition irréprochable. Faites confiance à notre savoir-faire pour des résultats qui allient qualité, précision et satisfaction.">
+    <title>Espace Sur Mesure Inc.</title>
     <link rel="stylesheet" href="/style.css">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "GeneralContractor",
+          "image": [
+           ],
+          "name": "Espace Sur Mesure Inc.",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "",
+            "addressLocality": "Mascouche",
+            "addressRegion": "QC",
+            "postalCode": "",
+            "addressCountry": "CA"
+          },
+          "url": "https://www.espacesurmesure.ca/",
+          "email": "info@espacesurmesure.ca",
+          "telephone": "+15147040232, +15143711047",
+          "openingHoursSpecification": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday"
+              ],
+              "opens": "08:00",
+              "closes": "17:00"
+            }
+          ]
+        }
+    </script>
     <script defer src="main.js"></script>
 </head>
+
 <body>
     <script>
         // Redirect to language-specific page based on browser settings
@@ -18,4 +56,5 @@
         }
     </script>
 </body>
+
 </html>
