add hamburger menu

--- a/fr/index.html
+++ b/fr/index.html
@@ -51,15 +51,22 @@
       <div class="logo">
         <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
       </div>
-      <div class="nav-links">
-        <a href="#services">Services</a>
-        <a href="#projects">Projets</a>
-        <a href="#about">À propos</a>
-        <a href="#team">Notre équipe</a>
-        <a href="#contact">Contact</a>
-      </div>
-      <div class="lang-switcher">
-        <a href="/en/">EN</a>
+      <button class="hamburger-button">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+      <div class="nav-menu">
+        <div class="nav-links">
+          <a href="#services">Services</a>
+          <a href="#projects">Projets</a>
+          <a href="#about">À propos</a>
+          <a href="#team">Notre équipe</a>
+          <a href="#contact">Contact</a>
+        </div>
+        <div class="lang-switcher">
+          <a href="/en/">EN</a>
+        </div>
       </div>
     </nav>
   </header>
