--- a/en/index.html
+++ b/en/index.html
@@ -51,16 +51,22 @@
       <div class="logo">
         <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
       </div>
-      <div class="nav-links">
-        <a href="#services">Services</a>
-        <a href="#projects">Projects</a>
-        <a href="#about">About</a>
-        <a href="#team">Our Team</a>
-        <a href="#contact">Contact</a>
-      </div>
-      <div class="lang-switcher">
-        <a href="/fr/">FR</a>
-      </div>
+      <button class="hamburger-button">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+      <div class="nav-menu">
+        <div class="nav-links">
+          <a href="#services">Services</a>
+          <a href="#projects">Projects</a>
+          <a href="#about">About</a>
+          <a href="#team">Our Team</a>
+          <a href="#contact">Contact</a>
+        </div>
+        <div class="lang-switcher">
+          <a href="/fr/">FR</a>
+        </div>
     </nav>
   </header>
   <section class="hero">
