--- a/en/index.html
+++ b/en/index.html
@@ -46,27 +46,36 @@
 </head>
 
 <body>
-  <header>
+    <header>
     <nav>
-      <div class="logo">
-        <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
+      <div class="nav-section-left">
+        <div class="logo">
+          <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
+        </div>
+        <div class="header-top-info">
+          <div>📞 <a>(514) 704-0232 / (514) 371-1047</a></div>
+          <div>📜 RBQ: 5858-4814-01</div>
+        </div>
       </div>
-      <button class="hamburger-button">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </button>
-      <div class="nav-menu">
-        <div class="nav-links">
-          <a href="#services">Services</a>
-          <a href="#projects">Projects</a>
-          <a href="#about">About</a>
-          <a href="#team">Our Team</a>
-          <a href="#contact">Contact</a>
+      <div class="nav-section-right">
+        <button class="hamburger-button">
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+        </button>
+        <div class="nav-menu">
+          <div class="nav-links">
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#about">About</a>
+            <a href="#team">Our Team</a>
+            <a href="#contact">Contact</a>
+          </div>
+          <div class="lang-switcher">
+            <a href="/fr/">FR</a>
+          </div>
         </div>
-        <div class="lang-switcher">
-          <a href="/fr/">FR</a>
-        </div>
+      </div>
     </nav>
   </header>
   <section class="hero">
