--- a/fr/index.html
+++ b/fr/index.html
@@ -46,31 +46,38 @@
 </head>
 
 <body>
-  <header>
+    <header>
     <nav>
-      <div class="logo">
-        <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
-      </div>
-      <button class="hamburger-button">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </button>
-      <div class="nav-menu">
-        <div class="nav-links">
-          <a href="#services">Services</a>
-          <a href="#projects">Projets</a>
-          <a href="#about">À propos</a>
-          <a href="#team">Notre équipe</a>
-          <a href="#contact">Contact</a>
+      <div class="nav-section-left">
+        <div class="logo">
+          <img src="/Logo.svg" alt="Espace Sur Mesure Inc.">
         </div>
-        <div class="lang-switcher">
-          <a href="/en/">EN</a>
+        <div class="header-top-info">
+          <div>📞 <a>(514) 704-0232 / (514) 371-1047</a></div>
+          <div>📜 RBQ: 5858-4814-01</div>
+        </div>
+      </div>
+      <div class="nav-section-right">
+        <button class="hamburger-button">
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+        </button>
+        <div class="nav-menu">
+          <div class="nav-links">
+            <a href="#services">Services</a>
+            <a href="#projects">Projets</a>
+            <a href="#about">À propos</a>
+            <a href="#team">Notre équipe</a>
+            <a href="#contact">Contact</a>
+          </div>
+          <div class="lang-switcher">
+            <a href="/en/">EN</a>
+          </div>
         </div>
       </div>
     </nav>
   </header>
-
   <section class="hero">
     <div class="hero-content">
       <h1>Vos experts en installation d'armoires</h1>
